<resources>
    <string name="app_name">MYGYM</string>
    <string name="spydermg">tech</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sahil_world_fitness">SAHIL WORLD FITNESS</string>
    <string name="register_for_new_user">REGISTER FOR NEW USER</string>
    <string name="logo">logo</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_d1">d1</string>
</resources>